bug: fix horizontally navbar extra padding

--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -77,7 +77,6 @@
     min-height: 64px;
     height: auto;
     font-size: 8px;
-    padding: 0 0 12px;
     justify-content: space-evenly;
     flex-wrap: nowrap;
 
